--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,7 +4,8 @@ name: Docker Image CI/CD for What-To-Eat
 # 워크플로우가 실행될 조건: main 브랜치에 push가 발생했을 때
 on:
   push:
-    branches: [ "main" ]
+    tags:
+      - 'v*.*.*'
 
 # 실행될 작업(Job)들 정의
 jobs:
@@ -14,7 +15,7 @@ jobs:
 
     # 작업의 단계(Step)들
     steps:
-      # 1. 레пози토리 코드 체크아웃
+      # 1. 레포지토리 코드 체크아웃
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -26,58 +27,36 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 3. Docker 이미지 메타데이터 설정 (태그 등)
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/what-to-eat-client
-            ${{ secrets.DOCKERHUB_USERNAME }}/what-to-eat-server
+      # Git 태그에서 버전 번호 추출
+      # 예: 'v1.2.3' 태그에서 'v'를 제거하고 '1.2.3'을 VERSION 변수에 저장
+      - name: Extract version from Git tag
+        id: get_version
+        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
 
-      # 4. 백엔드(서버) Docker 이미지 빌드 및 푸시
+      # 3. 메타데이터 액션은 더 이상 필요 없으므로 삭제합니다.
+
+      # --- 4. 백엔드 빌드 단계 수정 ---
       - name: Build and push Server Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./server
           file: ./server/Dockerfile
           push: true
-          # 태그 예시: your-username/what-to-eat-server:latest
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/what-to-eat-server:latest
-          labels: ${{ steps.meta.outputs.labels }}
+          # 'tags:' 부분을 버전 태그와 latest 태그로 동적 설정
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/what-to-eat-server:${{ steps.get_version.outputs.VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/what-to-eat-server:latest
+          labels: "version=${{ steps.get_version.outputs.VERSION }}"
 
-      # 5. 프론트엔드(클라이언트) Docker 이미지 빌드 및 푸시
+      # --- 5. 프론트엔드 빌드 단계 수정 ---
       - name: Build and push Client Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./client
           file: ./client/Dockerfile
           push: true
-          # 태그 예시: your-username/what-to-eat-client:latest
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/what-to-eat-client:latest
-          labels: ${{ steps.meta.outputs.labels }}
-  # # 👇 2. 쿠버네티스 배포 작업 (새로 추가)
-  # deploy-to-k8s:
-  #   # 'build-and-push' 작업이 성공해야만 이 작업이 실행됩니다.
-  #   needs: build-and-push
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Deploy to Kubernetes Cluster
-  #       # SSH 원격 접속을 도와주는 액션
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.VM_HOST }}
-  #         username: ${{ secrets.VM_USER }}
-  #         key: ${{ secrets.VM_SSH_KEY }}
-  #         port: ${{ secrets.VM_PORT }}
-  #         # VM에 접속해서 실행할 명령어들
-  #         script: |
-  #           # 1. 쿠버네티스 리소스를 업데이트합니다.
-  #           kubectl apply -f project/backend.yaml
-  #           kubectl apply -f project/frontend.yaml
-
-  #           # 2. (매우 중요) Deployment를 재시작하여 Docker Hub에서 새 이미지를 강제로 받아오게 합니다.
-  #           #    image 태그가 :latest로 동일해도 이 명령어로 파드를 새로 띄워야 변경사항이 반영됩니다.
-  #           kubectl rollout restart deployment what-to-eat-server-deployment
-  #           kubectl rollout restart deployment what-to-eat-client-deployment
+          # 'tags:' 부분을 버전 태그와 latest 태그로 동적 설정
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/what-to-eat-client:${{ steps.get_version.outputs.VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/what-to-eat-client:latest
+          labels: "version=${{ steps.get_version.outputs.VERSION }}"
